[RF] Optimized for 11 JRE and readme was extended